Remove padding from ss-values to fix vertical alignment

--- a/app/assets/stylesheets/bali/slim_select.css
+++ b/app/assets/stylesheets/bali/slim_select.css
@@ -173,7 +173,6 @@
   flex: 1 1 100%;
   min-width: 0;
   max-width: 100%;
-  padding: var(--ss-spacing-xs) 0;
 }
 
 /* Placeholder text */
